--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 200px;
     background-color: #333;
     color: white;
 }
@@ -20,8 +19,11 @@
 }
 
 .topBar{
+    margin-left: 30px;
     border-style: solid;
     border-width: 2px;
+    max-width: 1200px;
+    margin-right: 30px;
 }
 
 .topBar > ul {
@@ -55,20 +57,23 @@
     margin-top: 20px;
     float: left;
     width: 200px;
+    margin-left: 30px;
 }
 
 .content {
     margin-top: 20px;
-    margin-left: 202px;
+    margin-left: 232px;
     border-style: solid;
     border-width: 2px;
+    max-width: 1000px;
+    margin-right: 30px;
 }
 
 body{
     overflow: auto;
     opacity: .75;
     background: url("../content/BG.jpg");
-    background-size: cover;
+    background-size: auto;
 }
 
 
