--- a/css/desc.css
+++ b/css/desc.css
@@ -3,12 +3,14 @@
     margin-right: 25px;
     width: auto;
     color: black;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 16px;
 }
 
 .informationHeader{
     margin-right: 45px;
     margin-left: 45px;
-    color: midnightblue;
+    color: darkred;
     font-style: italic;
     border-style: solid;
     border-width: 2px;
