--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,8 @@
     padding: 0;
     background-color: #333;
     color: white;
-    font-family: Robotic;
-    font-size: 24px;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 16px;
 }
 
 .sideBar > ul > li a {
@@ -18,7 +18,7 @@
 }
 
 .sideBar > ul > li a:hover {
-    background-color: darkslateblue;
+    background-color: darkred;
     color: white;
 }
 
@@ -29,7 +29,7 @@
     max-width: 1200px;
     margin-right: 30px;
     font-family: Robotic;
-    font-size: 32px;
+    font-size: 26px;
 }
 
 .topBar > ul {
@@ -77,7 +77,7 @@
 
 body{
     overflow: auto;
-    opacity: .75;
+    opacity: .8;
     background: url("../content/BG.jpg");
     background-size: auto;
     background-repeat: no-repeat;
