--- a/css/styles.css
+++ b/css/styles.css
@@ -22,14 +22,19 @@
     color: white;
 }
 
+@font-face{
+    font-family: automation;
+    src: url(SFAutomaton.ttf);
+}
+
 .topBar{
     margin-left: 30px;
     border-style: solid;
     border-width: 2px;
     max-width: 1200px;
     margin-right: 30px;
-    font-family: Robotic;
     font-size: 26px;
+    font-family: automation;
 }
 
 .topBar > ul {
