Redid directories and path structures, added CSS for sources, added sources page, removed works cited page (duplicate), moved duplicate policy vacuum to drafts folder

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@
 body{
     overflow: auto;
     opacity: .8;
-    background: url("../content/BG.jpg");
+    background: url("../content/background/BG.jpg");
     background-size: auto;
     background-repeat: no-repeat;
     background-attachment: fixed;
