--- a/css/video.css
+++ b/css/video.css
@@ -3,7 +3,8 @@
 }
 
 .information{
-    background-color: black;
+    /*this should take care of the inherited opacity*/
+    background-color: rgba(0,0,0,1);
 }
 
 .content{
