--- a/css/video.css
+++ b/css/video.css
@@ -3,8 +3,20 @@
 }
 
 .information{
-    /*this should take care of the inherited opacity*/
-    background-color: rgba(0,0,0,1);
+    background-color: black;
+}
+
+body{
+    /* this needs to be overwritten for no opacity */
+    opacity: 1;
+}
+
+.sideBar{
+    opacity: 0.8;
+}
+
+.topBar{
+    opacity: 0.8;
 }
 
 .content{
