--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,17 @@
 .sideBar > ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 8px;
     background-color: #333;
     color: white;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .sideBar > ul > li a {
     display: block;
     color: white;
-    padding: 8px 0 8px 16px;
+    padding: 16px 0 8px 16px;
     text-decoration: none;
 }
 
